--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -291,6 +291,7 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   box-shadow: inset 0px 0px 3px 1px #7c7c7c;
   margin-left: -1%;
   padding-left: 0.5%;
+  /***** DECORATIVE BOX THAT ADDS THE RED OUTLINE ON PC SHEET *****/
   /***** REPEATING CONTAINERS *****/
   /***** ARMOR BUTTONS *****/
   /***** SKILLS *****/
@@ -411,6 +412,19 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     font-weight: bold; }
   .sheet-pc .sheet-pc-row button[type='roll'] {
     color: #040404; }
+  .sheet-pc div.sheet-border-box {
+    background-image: -moz-linear-gradient(#610b0d, transparent), -moz-linear-gradient(#610b0d, transparent);
+    background-image: -o-linear-gradient(#610b0d, transparent), -o-linear-gradient(#610b0d, transparent);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#610b0d), to(transparent));
+    background-image: -webkit-linear-gradient(#610b0d, transparent);
+    background-image: linear-gradient(#610b0d, transparent), linear-gradient(#610b0d, transparent);
+    border-top: 2px solid #610b0d;
+    clear: both;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 0px; }
+    .sheet-pc div.sheet-border-box div.sheet-pc-box {
+      border-top-right-radius: 10px;
+      border-top-left-radius: 0px; }
   .sheet-pc div.sheet-repeating-container div.repitem {
     display: inline-grid;
     padding: 1% 0.5%;
@@ -953,21 +967,6 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   .sheet-settings-row select.sheet-skill-select {
     width: 29%; }
 
-/***** DECORATIVE BOX THAT ADDS THE RED OUTLINE ON PC SHEET *****/
-.sheet-border-box {
-  background-image: -moz-linear-gradient(#610b0d, transparent), -moz-linear-gradient(#610b0d, transparent);
-  background-image: -o-linear-gradient(#610b0d, transparent), -o-linear-gradient(#610b0d, transparent);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#610b0d), to(transparent));
-  background-image: -webkit-linear-gradient(#610b0d, transparent);
-  background-image: linear-gradient(#610b0d, transparent), linear-gradient(#610b0d, transparent);
-  border-top: 2px solid #610b0d;
-  clear: both;
-  border-top-right-radius: 10px;
-  border-top-left-radius: 0px; }
-  .sheet-border-box .sheet-pc-box {
-    border-top-right-radius: 10px;
-    border-top-left-radius: 0px; }
-
 .sheet-static {
   margin-right: 0.5%; }
   .sheet-static .sheet-border-box,
@@ -976,35 +975,35 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     border-top-left-radius: 10px; }
 
 /***** HEADERS AND TRIANGLES *****/
-.sheet-header {
+div.sheet-header {
   display: inline-flex;
   float: right;
   height: 20px; }
 
-.sheet-triangle,
-.sheet-right-tri {
+div.sheet-triangle,
+div.sheet-right-tri {
   border-top: 20px solid transparent; }
 
-.sheet-triangle {
+div.sheet-triangle {
   border-right: 30px solid #610b0d; }
 
-.sheet-right-tri {
+div.sheet-right-tri {
   border-left: 30px solid #610b0d; }
 
-.sheet-right-header {
+div.sheet-right-header {
   margin-right: -8%;
   float: left; }
 
 /***** SECONDARY HEADERS LIKE ON SKILLS *****/
-.sheet-htab {
+div.sheet-htab {
   margin-right: -47px; }
-  .sheet-htab input[type='radio'] {
+  div.sheet-htab input[type='radio'] {
     margin-right: -80px;
     top: 4px;
     width: 80px; }
-    .sheet-htab input[type='radio'] + h1 {
+    div.sheet-htab input[type='radio'] + h1 {
       color: #9a9a9a; }
-    .sheet-htab input[type='radio']:hover ~ h1, .sheet-htab input[type='radio']:checked ~ h1 {
+    div.sheet-htab input[type='radio']:hover ~ h1, div.sheet-htab input[type='radio']:checked ~ h1 {
       color: #fff; }
 
 /***** SWITCH BETWEEN DIFFERENT TABS *****/
@@ -1449,19 +1448,6 @@ option.sheet-option-groups {
 input.sheet-skill-select[type='checkbox'] {
   opacity: 1;
   width: 3%; }
-
-/***** ARMOR *****/
-.sheet-armor-box {
-  /***** ARMOR SETTINGS *****/
-  /***** ARMOR DISPLAY *****/ }
-  .sheet-armor-box h3 {
-    margin-right: 5.5px; }
-  .sheet-armor-box .sheet-settings input[name='attr_name'] {
-    width: 40%; }
-  .sheet-armor-box .sheet-display .sheet-display-row {
-    margin-right: 3px; }
-    .sheet-armor-box .sheet-display .sheet-display-row:nth-of-type(7) {
-      margin-right: 0px; }
 
 /***** QUALITIES *****/
 .sheet-quality-box {
@@ -1964,23 +1950,6 @@ input.sheet-spell-toggle {
 .sheet-magic .sheet-repeating select {
   width: 100%; }
 
-/*:+:+:+: NPC MATRIX :+:+:+:*/
-input.sheet-program-toggle {
-  left: 15px;
-  top: 5px; }
-
-.sheet-host input.sheet-program-toggle {
-  left: 5px;
-  top: 2px; }
-
-span.sheet-program-toggle {
-  font-size: 15px !important;
-  left: 24px;
-  top: 2px; }
-
-.sheet-program-toggle[value='0'] + div.sheet-repeat-indent {
-  opacity: 0.3; }
-
 /*:+:+:+: HIDE SECTOINS WHEN NOT IN USE :+:+:+:*/
 .sheet-optional-flag:not([value='0']) + .sheet-textboxes {
   display: inherit;
@@ -2324,6 +2293,7 @@ span.sheet-d6 {
 /************************************************************************/
 /* DISPLAY SETTINGS
 	============================= */
+.sheet-pc div.sheet-skill-box input[name='attr_display_specialization'][value=' '] ~ div.sheet-buttons button[name*='specialization'],
 .sheet-pc div.sheet-skill-box input[name='attr_display_specialization'][value=''] ~ div.sheet-buttons button[name*='specialization'], .sheet-pc div.sheet-magic input.sheet-magic-toggle[value='rituals'] ~ .sheet-headers h2:nth-of-type(1n+2), .sheet-skills-active,
 .sheet-skills-know,
 .sheet-skills-lang, .sheet-magic-spells, .sheet-magic-preps, .sheet-magic-rituals, .sheet-quality, .sheet-martial, .sheet-collapsable .sheet-desc, .sheet-collapsable .sheet-desc-lifestyle, .sheet-matrix,
