--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -1,4 +1,4 @@
-input(name='attr_version' type='hidden' value='3.01')
+input(name='attr_version' type='hidden' value='3.02')
 
 //- CHARACTER SHETE PAGE
 input.sheet_type(name='attr_sheet_type' type='hidden' value='pc')
@@ -290,7 +290,7 @@ include src/pug/_variables.pug
 							h2(data-i18n=`${val.toLowerCase()}`) #{val}
 					.rows.repeating-container
 						fieldset(class=`repeating_augementations`)
-							span(name=`attr_augementation`)
+							span(name=`attr_augmentationn`)
 							span.center(name=`attr_rating`)
 							span.center(name=`attr_essence`)
 							+repeatingSectionFlags()
