--- a/Shadowrun5thEdition/src/pug/_mixins.pug
+++ b/Shadowrun5thEdition/src/pug/_mixins.pug
@@ -193,4 +193,4 @@ mixin repeatingSectionFlags()
 mixin repeatingSectionNotes(section)   
     h3(data-i18n='notes') notes
     label(data-i18n-title='notes' title='notes')
-        textarea(name='attr_notes' placeholder='Notes' title=`@{repeating_preperations_${section}`+'${x}_notes}' type='text' value='')
+        textarea(name='attr_notes' placeholder='Notes' title=`@{repeating_${section}_`+'${x}_notes}' type='text' value='')
