--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -566,7 +566,7 @@ input.sheet-tab0 + span {
 
 /*  NOTEBOX */
 .sheet-row-details.sheet-notebox {
-    height: 240px;
+    height: 265px;
     padding: 0 4px;
 }
 
@@ -583,7 +583,7 @@ input.sheet-tab0 + span {
     text-align: left;
 }
 
-.sheet-row-details.sheet-notebox div.sheet-col-notebox div.sheet-show-notes input[type=checkbox] {
+.sheet-row-details.sheet-notebox div.sheet-show-notes input[type=checkbox] {
     opacity: 1;
     width: 15px;
     height: 15px;
@@ -1673,6 +1673,11 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
     width: 250px;
 }
 
+.sheet-ranged-notebox .sheet-col-input-medium {
+    width: 140px;
+    text-align: left;
+}
+
 .sheet-ranged-notebox .sheet-tooltip {
     margin-left: 0;
 }
@@ -1897,6 +1902,23 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
     padding: 3px;
 }
 
+.sheet-spells .sheet-header.sheet-spell-stats-header {
+    height: 34px;
+}
+
+.sheet-spells .sheet-header.sheet-spell-stats-header select {
+    height: 25px;
+    margin: 0;
+}
+
+.sheet-spells .sheet-header.sheet-spell-stats-header input {
+    height: 25px;
+}
+
+.sheet-spells .sheet-header.sheet-spell-stats-header .sheet-margin-right {
+    margin-right: 5px;
+}
+
 /* -- highlight row -- */
 .sheet-spells .repcontainer.ui-sortable.editmode .sheet-toggle-highlight {
     opacity: 0;
@@ -1921,21 +1943,26 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
     background: #B7FFAA;    
 }
 
+.sheet-spells input.sheet-checkbox[type="checkbox"] {
+    opacity: 1;
+    height: 16px;
+}
+
 .sheet-spells .sheet-col0 { width: calc(100% - 700px); }
 .sheet-spells .sheet-col0 input { text-align:left; }
 .sheet-spells .sheet-col1 { width: 25px; }
 .sheet-spells .sheet-col1 input { text-align:left; }
-.sheet-spells .sheet-col2 { width: 40px; }
+.sheet-spells .sheet-col2 { width: 30px; }
 .sheet-spells .sheet-col3 { width: 45px; }
 .sheet-spells .sheet-col4 { width: 30px; }
 .sheet-spells .sheet-col5 { width: 30px; }
 .sheet-spells .sheet-col6 { width: 75px; }
-.sheet-spells .sheet-col7 { width: 80px; }
-.sheet-spells .sheet-col8 { width: 70px; }
+.sheet-spells .sheet-col7 { width: 60px; }
+.sheet-spells .sheet-col8 { width: 90px; }
 .sheet-spells .sheet-col9 { width: 115px; }
 .sheet-spells .sheet-col10 { width: 85px; }
 .sheet-spells .sheet-col11 { width: 65px; }
-.sheet-spells .sheet-col12 { width: 40px; }
+.sheet-spells .sheet-col12 { width: 25px; }
 
 .sheet-spells .sheet-row-stats .sheet-col0 { margin-left: 44px; width: calc(100% - 748px); }
 
@@ -1954,6 +1981,22 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
     opacity: 0;
     z-index: -1;
 }
+
+.sheet-spells .sheet-row-college .sheet-tooltip.sheet-alt-indent {
+    margin-left: -15px;
+}
+
+.sheet-spells .sheet-row-details.sheet-notebox {
+    height: 285px;
+    padding: 0 4px;
+}
+
+.sheet-spells.sheet-spell-stats {
+    height: 40px;    
+}
+
+
+
 
 /* -- Roll Templates -- */
 .sheet-rolltemplate-addToTracker .sheet-container table.sheet-result {
@@ -2079,6 +2122,10 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
 .sheet-rolltemplate-skillRoll .sheet-container table.sheet-result span.sheet-damageType {
     font-weight: bold;
     color: darkred;
+}
+
+.sheet-rolltemplate-skillRoll .sheet-container table.sheet-result span.sheet-title {
+    font-weight: bold;
 }
 
 .sheet-rolltemplate-skillRoll .sheet-container table.sheet-result tr:nth-child(odd) {
