Fixed upgrades/downgrades so be rules-correct for D20/D4 cases, respectively.

--- a/TailsOfEquestria/sheet.css
+++ b/TailsOfEquestria/sheet.css
@@ -320,11 +320,12 @@
 }
 .charsheet .sheet-main-container .sheet-pcSheet .sheet-bio .sheet-labelledUnderlined label {
   display: inline-block;
+  font-size: 0.7em;
   line-height: 1em;
   margin: 0;
   position: relative;
   text-align: right;
-  width: 1.5in;
+  width: 2in;
 }
 .charsheet .sheet-main-container .sheet-pcSheet .sheet-bio .sheet-labelledUnderlined .sheet-inner {
   display: inline-block;
@@ -335,7 +336,7 @@
   color: #5e3dba;
   font-size: 0.7em;
   padding: 0;
-  width: 3in;
+  width: 2.5in;
 }
 .charsheet .sheet-main-container .sheet-pcSheet .sheet-friendshipTokens {
   background: #f226e4;
