--- a/TailsOfEquestria/less/pcSheet.less
+++ b/TailsOfEquestria/less/pcSheet.less
@@ -25,11 +25,12 @@
 
       label {
         display: inline-block;
+        font-size: 0.7em;
         line-height: 1em;
         margin: 0;
         position: relative;
         text-align: right;
-        width: 1.5in;
+        width: 2in;
       }
 
       .inner {
@@ -41,7 +42,7 @@
           color: @fontColor;
           font-size: 0.7em;
           padding: 0;
-          width: 3in;
+          width: 2.5in;
         }
       }
     }
