--- a/TailsOfEquestria/pug/fields.pug
+++ b/TailsOfEquestria/pug/fields.pug
@@ -12,7 +12,7 @@ mixin fraction(name)
     input(type='number', name='attr_' + name + '_max')
 
 mixin input(type, name)
-  input(type=type, name='attr_' + name, id=attributes.id, placeholder=attributes.placeholder, style=attributes.style, value=attributes.value, min=attributes.min, max=attributes.max, disabled=attributes.disabled, checked=attributes.checked, class=attributes.class, title=attributes.title)
+  input(type=type, name='attr_' + name, id=attributes.id, placeholder=attributes.placeholder, style=attributes.style, value=attributes.value, min=attributes.min, max=attributes.max, disabled=attributes.disabled, checked=attributes.checked, class=attributes.class, title=attributes.title, spellcheck='false')
 
 mixin labelledAbove(label)
   .labelledAbove(style=attributes.style)
@@ -59,6 +59,8 @@ mixin rollButton(options)
       tpl += '{{notes=@{' + options.notes + '}}}';
     if(options.updowngrade)
       tpl += '{{updowngrade=@{' + options.updowngrade + '}}}';
+    if (options.updowngrade_note)
+      tpl += '{{updowngrade_note=@{' + options.updowngrade_note + '}}}'
   button(type='roll', value=tpl, title='Click to roll!')
 
 mixin select(name)
@@ -141,3 +143,4 @@ mixin updowngrade(prefix)
         span ▼
     span
       +labelledUnderlined('')(style='width: 0.3in;'): +input('number', prefix + 'updowngrade')
+      +input('hidden', prefix + 'updowngrade_note')
