--- a/TailsOfEquestria/pug/tabPC.pug
+++ b/TailsOfEquestria/pug/tabPC.pug
@@ -2,9 +2,9 @@ include fields.pug
 .tabSheet.pcSheet
   div
     .bio
-      +labelledUnderlined('Pony Name:'): +input('text', 'character_name')
+      +labelledUnderlined('Character Name:'): +input('text', 'character_name')
       +labelledUnderlined('Player Name:'): +input('text', 'player_name')
-      +labelledUnderlined('Race:'): +input('text', 'race')
+      +labelledUnderlined('Character Race:'): +input('text', 'race')
       +labelledUnderlined('Level:'): +input('number', 'level')
       +labelledUnderlined('Element of Harmony:'): +select('elementOfHarmony')
         +option('generosity')
@@ -36,14 +36,15 @@ include fields.pug
         h1 Stamina:
         +fraction('stamina')
       div
-        +labelledUnderlined('Damage Modifiers:')(style='font-size: 1.5em;  max-width: 2in;'): +input('text', 'damageReduction')(style='width: 2.4in;')
+        +labelledUnderlined('Damage Reduction:')(style='font-size: 1.5em;  max-width: 2in;'): +input('text', 'damageReduction')(style='width: 2.4in;')
     .traits
       .trait.body
         label.traitName Body
         +rollButton({
           attr: 'Body',
           result: 'body_equation',
-          updowngrade: 'body_updowngrade'
+          updowngrade: 'body_updowngrade',
+          updowngrade_note: 'body_updowngrade_note'
         })
         +selectDice('body')
         +updowngrade("body")
@@ -53,7 +54,8 @@ include fields.pug
         +rollButton({
           attr: 'Mind',
           result: 'mind_equation',
-          updowngrade: 'mind_updowngrade'
+          updowngrade: 'mind_updowngrade',
+          updowngrade_note: 'mind_updowngrade_note'
         })
         +selectDice('mind')
         +updowngrade("mind")
@@ -63,7 +65,8 @@ include fields.pug
         +rollButton({
           attr: 'Charm',
           result: 'charm_equation',
-          updowngrade: 'charm_updowngrade'
+          updowngrade: 'charm_updowngrade',
+          updowngrade_note: 'charm_updowngrade_note'
         })
         +selectDice('charm')
         +updowngrade("charm")
@@ -71,46 +74,36 @@ include fields.pug
 
   div
     .talents
-      mixin talent(prefix, placeholder)
-        - 
-          prefix = prefix || '';
-          var isCutieMark = prefix === 'talent_cutieMark_';
-          var isRacial = prefix === 'talent_racial_';
-        .talent(class=isCutieMark ? 'isCutieMark' : '')
+      h1 Talents:
+      +repeating('talents')
+        .talent
           +rollButton({
-            attr: '@{' + prefix + 'name}',
-            result: prefix + 'equation',
-            notes: prefix + 'notes',
-            updowngrade: prefix + 'updowngrade'
+            attr: '@{' + 'name}',
+            result: 'equation',
+            notes: 'notes',
+            updowngrade: 'updowngrade',
+            updowngrade_note: 'updowngrade_note'
           })
           div(style="display: inline-block; vertical-align: top; width: 0.4in;")
             .talentIcon(style='font-size: 3em;')
           div(style="display: inline-block; width: 6.5in;")
-            +labelledUnderlined('')(style='width: 2.5in;'): +input('text', prefix + 'name')(placeholder=placeholder)
-            +labelledUnderlined('Source:'): +selectTalentSource(prefix + 'source')
-            +labelledUnderlined('Dice:'): +selectDice(prefix + 'dice')
-            +labelledUnderlined('Trait'): +selectTrait(prefix + 'trait')
-            +updowngrade(prefix)
+            +labelledUnderlined('')(style='width: 2.5in;'): +input('text', 'name')(placeholder='Talent Name')
+            +labelledUnderlined('Source:'): +selectTalentSource('source')
+            +labelledUnderlined('Dice:'): +selectDice('dice')
+            +labelledUnderlined('Trait'): +selectTrait('trait')
+            +updowngrade('')
             .notes
-              +labelledUnderlined('Notes:'): +input('text', prefix + 'notes')
-          +input('hidden', prefix + 'equation')
-
-      h1 Talents:
-      +repeating('talents')
-        +talent('', '')      
+              +labelledUnderlined('Notes:'): +input('text', 'notes')
+          +input('hidden', 'equation')
   div
     .quirks
-      mixin quirk(isMain)
-        -var prefix = isMain ? 'quirk_main_' : '';
-        .quirk(class=isMain ? 'quirkMain' : '')
-          .quirkIcon(style='font-size: 2em;')
-          +labelledUnderlined(''): +input('text', prefix + 'name')
-          +labelledUnderlined('Source:'): +selectQuirkSource(prefix + 'source')
-          +labelledUnderlined('Notes'): +input('text', prefix + 'notes')
-      
       h1 Quirks:
       +repeating('quirks')
-        +quirk(false)
+        .quirk
+          .quirkIcon(style='font-size: 2em;')
+          +labelledUnderlined(''): +input('text', 'name')(placeholder='Quirk Name')
+          +labelledUnderlined('Source:'): +selectQuirkSource('source')
+          +labelledUnderlined('Notes'): +input('text', 'notes')
 
   div
     .reputations
