--- a/Ambition_Avarice/ambition_avarice.css
+++ b/Ambition_Avarice/ambition_avarice.css
@@ -107,7 +107,7 @@ input[type=number].sheet-txtfield {
 /* dice images */
 
 div.sheet-d20{
-  background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/ambition_avarice/Ambition_Avarice/images/d20.png); 
+  background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Ambition_Avarice/images/d20.png); 
   background-size: 30px 30px;
   background-repeat: no-repeat;
   width: 30px;
@@ -115,7 +115,7 @@ div.sheet-d20{
 }
 
 div.sheet-d6{
-  background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/ambition_avarice/Ambition_Avarice/images/d6.png); 
+  background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Ambition_Avarice/images/d6.png); 
   background-size: 30px 30px;
   background-repeat: no-repeat;
   width: 30px;
@@ -135,7 +135,7 @@ button[type="roll"].sheet-d6:hover{
 }
 
 button[type="roll"].sheet-d20{
-  background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/ambition_avarice/Ambition_Avarice/images/d20.png); 
+  background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Ambition_Avarice/images/d20.png); 
   background-size: 26px 26px;
   background-repeat: no-repeat;
   width: 26px;
@@ -146,7 +146,7 @@ button[type="roll"].sheet-d20{
 }
 
 button[type="roll"].sheet-d6{
-  background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/ambition_avarice/Ambition_Avarice/images/d6.png); 
+  background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Ambition_Avarice/images/d6.png); 
   background-size: 26px 26px;
   background-repeat: no-repeat;
   width: 26px;
@@ -217,7 +217,8 @@ button[type="roll"].sheet-empty:before{
 
 input.sheet-tab1:checked ~ div.sheet-tab1,
 input.sheet-tab2:checked ~ div.sheet-tab2,
-input.sheet-tab3:checked ~ div.sheet-tab3
+input.sheet-tab3:checked ~ div.sheet-tab3,
+input.sheet-tab4:checked ~ div.sheet-tab4
 {
   display: grid;
 }
@@ -272,6 +273,11 @@ input.sheet-tab3 + span::before
   left: 415px;
 }
 
+input.sheet-tab4 + span::before
+{
+  left: 570px;
+}
+
 /* ------------ PAGES ---------- */
 
 div.sheet-pg1 {
@@ -295,9 +301,10 @@ div.sheet-pg2 {
   display: grid;
   grid-gap: 1px;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 80px auto;
-  grid-template-areas:"coin  companions"
-                      "equip companions";
+  grid-template-rows: 80px fit-content(30%) auto;
+  grid-template-areas:"coin    ac-types  "
+                      "weapons armor     "
+                      "equip   companions";
   width: 750px;
   height: 1000px;
   position: relative;
@@ -313,6 +320,16 @@ div.sheet-pg3 {
                       "npc-attrs npc-buttons notes   ";
   width: 600px;
   height: 700px;
+  position: relative;
+  top:-20px;
+}
+
+div.sheet-pg4 {
+  display: grid;
+  grid-gap: 1px;
+  grid-template-columns: 1fr 1fr;
+  width: 750px;
+  height: 1000px;
   position: relative;
   top:-20px;
 }
@@ -343,7 +360,7 @@ div.sheet-name .sheet-short{
 /* LOGO SECTION */
 div.sheet-logo{
   grid-area: logo;
-  background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/ambition_avarice/Ambition_Avarice/images/logo.png); 
+  background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Ambition_Avarice/images/logo.png); 
   background-size: 230px 123px;
   background-repeat: no-repeat;
 }
@@ -378,21 +395,21 @@ div.sheet-hp-ac{
   grid-area: hp-ac;
 }
 div.sheet-hp-ac div.sheet-hp{
-  background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/ambition_avarice/Ambition_Avarice/images/hp.png); 
+  background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Ambition_Avarice/images/hp.png); 
   background-size: 220px 110px;
   background-repeat: no-repeat;
   width: 220px;
   height: 110px;
 }
 div.sheet-hp-ac div.sheet-to-hit{
-  background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/ambition_avarice/Ambition_Avarice/images/to-hit.png); 
+  background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Ambition_Avarice/images/to-hit.png); 
   background-size: 100px 110px;
   background-repeat: no-repeat;
   width: 100px;
   height:110px;
 }
 div.sheet-hp-ac div.sheet-ac{
-  background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/ambition_avarice/Ambition_Avarice/images/ac.png); 
+  background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Ambition_Avarice/images/ac.png); 
   background-size: 100px 110px;
   background-repeat: no-repeat;
   width: 100px;
@@ -532,8 +549,55 @@ div.sheet-coin label{
   margin: 1px;
 }
 
+
+div.sheet-weapons{
+  grid-area: weapons;
+}
+
+div.sheet-armor{
+  grid-area: armor;
+}
+
+div.sheet-weapons div.sheet-names,
+div.sheet-armor div.sheet-names{
+  width: 100%;
+  justify-content: space-evenly; 
+}
+
+div.sheet-weapons div.sheet-names span,
+div.sheet-armor div.sheet-names span{
+  font-weight: bold;
+}
+
+div.sheet-weapons div.sheet-names span:first-child,
+div.sheet-armor div.sheet-names span:first-child{
+  align-self: flex-start;
+}
+
+
+.sheet-armor > div:nth-child(2) > span:nth-child(2) {
+  padding-left: 60px;
+}
+.sheet-armor > div:nth-child(2) > span:nth-child(4) {
+  padding-right: 35px;
+}
+.sheet-armor > div:nth-child(2) > span:nth-child(3) {
+  padding-left: 20px;
+}
+.sheet-armor > div:nth-child(2) > span:nth-child(5) {
+  padding-right: 10px;
+}
+
+
 div.sheet-equip{
   grid-area: equip;
+}
+
+div.sheet-ac-types{
+  grid-area: ac-types;
+}
+.sheet-ac-types > div:nth-child(2) > div:nth-child(2) > label:nth-child(1) {
+  margin-right: 15px;
 }
 
 div.sheet-companions{
