--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -329,17 +329,6 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 
 		input.sheet-display-flag { position: absolute; }
 
-		div.sheet-border-box {
-			button[type='roll'] {
-				font-size: 0.8em;
-				font-weight: bold;
-			}
-		}
-
-		.sheet-pc-row {
-			button[type='roll'] { color:$blacker }
-		}
-
 		/***** DECORATIVE BOX THAT ADDS THE RED OUTLINE ON PC SHEET *****/			
 		div.sheet-border-box {
 			background-image: -moz-linear-gradient($red, transparent), -moz-linear-gradient($red, transparent);
@@ -351,6 +340,11 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 			clear           : both;
 			border-top-right-radius: 10px;
 			border-top-left-radius : 0px;
+
+			button[type='roll'] {
+				font-size: 0.8em;
+				font-weight: bold;
+			}
 
 			div.sheet-pc-box {
 				border-top-right-radius: 10px;
@@ -385,7 +379,8 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 					padding-right: 0px;
 
 					input[name='attr_name'],
-					input[name='attr_weapon'] { 
+					input[name='attr_weapon'],
+					input[name='attr_quality'] { 
 						text-align: left; 
 					}
 
@@ -414,7 +409,19 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 			input[type='number'] { text-align: center; }
 		}
 
-		/***** ARMOR BUTTONS *****/
+		/***** STATIC  *****/
+		div.sheet-static { 
+			margin-right: 0.5%;
+
+			div.sheet-border-box,
+			div.sheet-border-box .sheet-pc-box {
+				border-top-right-radius: 0px;
+				border-top-left-radius : 10px;
+			}	
+		}
+
+
+		/***** CORE  *****/
 		div.sheet-core {
 			div.sheet-armor-buttons {
 				display    : inline-block;
@@ -432,6 +439,65 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				}
 
 				span { font-size  : 1em; }
+			}
+
+			/***** QUALITIES *****/
+			div.sheet-quality-box {
+				div.sheet-htab input[type='radio'] {
+					margin-right: -100px;
+					width       : 100px;
+				}
+
+				div.sheet-header:nth-of-type(2) .sheet-htab input[type='radio'] {
+					margin-right: -150px;
+					width       : 150px;
+				}
+
+				div.sheet-quality {
+					$qualityGrid: 1fr 3em 1.5em 1em 1em;
+
+
+					h2:nth-of-type(2) { text-align: center; } 
+
+					div.sheet-headers {
+						display: grid;
+						grid-template-columns: $qualityGrid;
+						@extend %gridGap;
+					}
+
+					div.repitem {
+						grid-template-columns: $qualityGrid;
+						@include repeatingInformation(6, false);
+
+						div.sheet-settings { 
+							grid-column: 1 / 6;
+							grid-template-columns: $qualityGrid;
+						}
+					}
+				}
+
+				div.sheet-martial {
+					$martialGrid: 2fr 1fr 1.5em 1em 1em;
+
+
+					h2:nth-of-type(2) { text-align: center; } 
+
+					div.sheet-headers {
+						display: grid;
+						grid-template-columns: $martialGrid;
+						@extend %gridGap;
+					}
+
+					div.repitem {
+						grid-template-columns: $martialGrid;
+						@include repeatingInformation(6, false);
+
+						div.sheet-settings { 
+							grid-column: 1 / 6;
+							grid-template-columns: $martialGrid;
+						}
+					}
+				}
 			}
 		}
 
@@ -578,7 +644,6 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 
 			}
 		}
-
 
 		/*** AUGS ****/
 		div.sheet-augs {
@@ -740,7 +805,6 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				}
 			}
 		}
-
 
 		/*** MATRIX ****/
 		div.sheet-matrix {
