--- a/Shadowrun5thEdition/src/scss/_hide.scss
+++ b/Shadowrun5thEdition/src/scss/_hide.scss
@@ -28,6 +28,29 @@
 		.sheet-options_toggle[value='#{$tab}'] ~ .sheet-#{$tab} { @extend %display-inline-block; }
 	}
 
+	/***** SWITCH BETWEEN DIFFERENT TABS *****/ 
+	.sheet-skills-active,
+	.sheet-skills-know,
+	.sheet-skills-lang {
+		@extend %display-none;
+	}
+
+	.sheet-tab-switch[value='active'] ~ .sheet-skills-active,
+	.sheet-tab-switch[value='knowledge'] ~ .sheet-skills-know,
+	.sheet-tab-switch[value='language'] ~ .sheet-skills-lang {
+		@extend %display-inline;
+	}
+	
+	@each $magicTabs in 'spells', 'preps', 'rituals' {
+		.sheet-magic-#{$magicTabs} { @extend %display-none; }
+		.sheet-magic-toggle[value='#{$magicTabs}'] ~ .sheet-magic-#{$magicTabs} { @extend %display-inline; }
+	}
+
+	@each $qualityTabs in 'quality', 'martial' {
+		.sheet-#{$qualityTabs} { @extend %display-none; }
+		.sheet-tab-switch[value='#{$qualityTabs}'] ~ .sheet-#{$qualityTabs} { @extend %display-inline; }
+	}
+
 	/***** SETTINGS *****/				
 	div.sheet-collapse,
 	.sheet-settings { @extend %display-none; }
