--- a/Shadowrun5thEdition/src/scss/_pc.scss
+++ b/Shadowrun5thEdition/src/scss/_pc.scss
@@ -19,16 +19,6 @@
 		select.sheet-skill-select {width: 29%;}
 	}
 
-	.sheet-static { 
-		margin-right: 0.5%;
-
-		.sheet-border-box,
-		.sheet-border-box .sheet-pc-box {
-			border-top-right-radius: 0px;
-			border-top-left-radius : 10px;
-		}	
-	}
-
 /***** HEADERS AND TRIANGLES *****/
 	div.sheet-header {
 		display: inline-flex;
@@ -69,28 +59,6 @@
 		}
 	}
 
-/***** SWITCH BETWEEN DIFFERENT TABS *****/ 
-	.sheet-skills-active,
-	.sheet-skills-know,
-	.sheet-skills-lang {
-		@extend %display-none;
-	}
-
-	.sheet-tab-switch[value='active'] ~ .sheet-skills-active,
-	.sheet-tab-switch[value='knowledge'] ~ .sheet-skills-know,
-	.sheet-tab-switch[value='language'] ~ .sheet-skills-lang {
-		@extend %display-inline;
-	}
-	
-	@each $magicTabs in 'spells', 'preps', 'rituals' {
-		.sheet-magic-#{$magicTabs} { @extend %display-none; }
-		.sheet-magic-toggle[value='#{$magicTabs}'] ~ .sheet-magic-#{$magicTabs} { @extend %display-inline; }
-	}
-
-	@each $qualityTabs in 'quality', 'martial' {
-		.sheet-#{$qualityTabs} { @extend %display-none; }
-		.sheet-tab-switch[value='#{$qualityTabs}'] ~ .sheet-#{$qualityTabs} { @extend %display-inline; }
-	}
 
 /***** BOXES FOR DIFFERENT PC SECTIONS *****/
 	.sheet-pc-box {
@@ -641,7 +609,7 @@
 		width  : 100%;
 	}
 
-	@each $box in 'quality-box', 'contacts', 'item-box' {
+	@each $box in 'contacts', 'item-box' {
 		.sheet-#{$box} .sheet-display,
 		.sheet-#{$box} .sheet-settings div {
 			@extend .sheet-skills-row;
@@ -660,58 +628,6 @@
 	input.sheet-skill-select[type='checkbox'] {
 		opacity: 1;
 		width: 3%;
-	}
-
-
-/***** QUALITIES *****/
-	.sheet-quality-box {
-		h3:first-child {
-			margin-right: 67%;
-			width       : 15%;
-		}
-
-		/***** QUALITIES & MARTIAL ARTS TABS *****/
-		.sheet-htab input[type='radio'] {
-			margin-right: -100px;
-			width       : 100px;
-		}
-
-		.sheet-header:nth-of-type(2) .sheet-htab input[type='radio'] {
-			margin-right: -150px;
-			width       : 150px;
-		}
-	}
-
-/***** QUALITIES SETTINGS *****/
-	.sheet-quality {
-		button[type='roll']  { left: 90%; }
-
-		.sheet-settings {
-			input[type='text'] { width: 82%; }
-
-			select  { width: 8%; }
-		}
-
-		.sheet-display-row {
-			&:nth-of-type(1) { width: 80%; }
-			&:nth-of-type(2) { width: 8%; }
-		}
-	}
-
-/***** MARTIAL ARTS *****/
-	.sheet-martial {
-		h3:first-child {margin-right: 39%;}
-
-		input[type='text'],
-		.sheet-display-row {
-			width: 54%;
-		}
-
-		input[type='text']:nth-of-type(2),
-		.sheet-display-row:nth-of-type(2) {
-			text-align: left;
-			width     : 43%;
-		}
 	}
 
 	/***** LIFESTYLES *****/
