Taura - The background should be visible now

--- a/Taura/TauraSheet.css
+++ b/Taura/TauraSheet.css
@@ -20,7 +20,7 @@ input[type='number'] {
 .sheet-character-sheet {
   width: 867px;
   height: 1121px;
-  background: url('TauraSheet.sheet-png') top left no-repeat;
+  background: url('TauraSheet.png') top left no-repeat;
 }
 
 /* Personal details */
