--- a/Taura/TauraSheet.css
+++ b/Taura/TauraSheet.css
@@ -1,8 +1,8 @@
 input,
 textarea {
-  background-color: rgba(255, 255, 255, 0.sheet-5);
+  background-color: rgba(255, 255, 255, 0.5);
   border-radius: 5px;
-  position: absolute;
+  position: relative;
   resize: none;
 }
 
@@ -13,32 +13,33 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-input[type='number'] {
+input[type="number"] {
   -moz-appearance: textfield; /* Firefox */
 }
 
 .sheet-character-sheet {
   width: 867px;
   height: 1121px;
-  background: url('TauraSheet.sheet-png') top left no-repeat;
+  background: url("https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Taura/TauraSheet.png")
+    top left no-repeat;
 }
 
 /* Personal details */
 .sheet-character-name {
-  top: 45px;
-  left: 152px;
+  top: 33px;
+  left: 147px;
   width: 240px;
 }
 
 .sheet-character-race {
-  left: 179px;
-  top: 70px;
+  left: 174px;
+  top: 32px;
   width: 213px;
 }
 
 .sheet-character-concept {
-  left: 157px;
-  top: 95px;
+  left: 152px;
+  top: 31px;
   width: 235px;
 }
 
@@ -47,53 +48,53 @@ input[type='number'] {
 .sheet-reflexes-value,
 .sheet-willpower-value,
 .sheet-intellect-value {
-  left: 106px;
+  left: 97px;
   text-align: center;
   font-size: 20;
   border-radius: 25px;
-  width: 30px;
-  height: 30px;
+  width: 32px !important;
+  height: 32px !important;
 }
 
 .sheet-fortitude-value {
-  top: 160px;
+  top: 67px;
 }
 
 .sheet-reflexes-value {
-  top: 246px;
+  top: 121px;
 }
 
 .sheet-willpower-value {
-  top: 329px;
+  top: 172px;
 }
 
 .sheet-intellect-value {
-  top: 413px;
+  top: 224px;
 }
 
 .sheet-fortitude-aspect,
 .sheet-reflexes-aspect,
 .sheet-willpower-aspect,
 .sheet-intellect-aspect {
-  left: 144px;
+  left: 137px;
   height: 24px;
   width: 198px;
 }
 
 .sheet-fortitude-aspect {
-  top: 162px;
+  top: -59px;
 }
 
 .sheet-reflexes-aspect {
-  top: 246px;
+  top: -2px;
 }
 
 .sheet-willpower-aspect {
-  top: 330px;
+  top: 54px;
 }
 
 .sheet-intellect-aspect {
-  top: 414px;
+  top: 110px;
 }
 
 /* General checkbox configuration */
@@ -132,10 +133,10 @@ input[type='number'] {
   border-radius: 50%;
   border: 1px solid #ddd;
   cursor: pointer;
-  height: 15px;
+  height: 15px !important;
   outline: none;
   vertical-align: middle;
-  width: 15px;
+  width: 15px !important;
 }
 
 .sheet-health-point-1:checked,
@@ -177,27 +178,27 @@ input[type='number'] {
 .sheet-health-point-3,
 .sheet-health-point-4,
 .sheet-health-point-5 {
-  top: 190px;
+  top: -142px;
 }
 
 .sheet-health-point-1 {
-  left: 219px;
+  left: 214px;
 }
 
 .sheet-health-point-2 {
-  left: 243px;
+  left: 218px;
 }
 
 .sheet-health-point-3 {
-  left: 267px;
+  left: 225px;
 }
 
 .sheet-health-point-4 {
-  left: 291px;
+  left: 230px;
 }
 
 .sheet-health-point-5 {
-  left: 315px;
+  left: 235px;
 }
 
 /* Fatigue points */
@@ -206,27 +207,27 @@ input[type='number'] {
 .sheet-fatigue-point-3,
 .sheet-fatigue-point-4,
 .sheet-fatigue-point-5 {
-  top: 272px;
+  top: -77px;
 }
 
 .sheet-fatigue-point-1 {
-  left: 219px;
+  left: 214px;
 }
 
 .sheet-fatigue-point-2 {
-  left: 243px;
+  left: 218px;
 }
 
 .sheet-fatigue-point-3 {
-  left: 267px;
+  left: 225px;
 }
 
 .sheet-fatigue-point-4 {
-  left: 291px;
+  left: 230px;
 }
 
 .sheet-fatigue-point-5 {
-  left: 315px;
+  left: 235px;
 }
 
 /* Position points */
@@ -235,27 +236,27 @@ input[type='number'] {
 .sheet-position-point-3,
 .sheet-position-point-4,
 .sheet-position-point-5 {
-  top: 358px;
+  top: -9px;
 }
 
 .sheet-position-point-1 {
-  left: 219px;
+  left: 214px;
 }
 
 .sheet-position-point-2 {
-  left: 243px;
+  left: 218px;
 }
 
 .sheet-position-point-3 {
-  left: 267px;
+  left: 225px;
 }
 
 .sheet-position-point-4 {
-  left: 291px;
+  left: 230px;
 }
 
 .sheet-position-point-5 {
-  left: 315px;
+  left: 235px;
 }
 
 /* Sanity points */
@@ -264,88 +265,88 @@ input[type='number'] {
 .sheet-sanity-point-3,
 .sheet-sanity-point-4,
 .sheet-sanity-point-5 {
-  top: 442px;
+  top: 58px;
 }
 
 .sheet-sanity-point-1 {
-  left: 219px;
+  left: 214px;
 }
 
 .sheet-sanity-point-2 {
-  left: 243px;
+  left: 218px;
 }
 
 .sheet-sanity-point-3 {
-  left: 267px;
+  left: 225px;
 }
 
 .sheet-sanity-point-4 {
-  left: 291px;
+  left: 230px;
 }
 
 .sheet-sanity-point-5 {
-  left: 315px;
+  left: 235px;
 }
 
 /* Drama points */
 .sheet-drama-value {
-  left: 471px;
-  top: 162px;
-  width: 60px;
-  height: 60px;
+  left: 464px;
+  top: -241px;
+  width: 60px !important;
+  height: 60px !important;
   border-radius: 50%;
   text-align: center;
   font-size: 30px;
 }
 
 .sheet-drama-point-1 {
-  top: 175px;
-  left: 437px;
+  top: -288px;
+  left: 432px;
 }
 
 .sheet-drama-point-2 {
-  top: 195px;
-  left: 439px;
+  top: -286px;
+  left: 434px;
 }
 
 .sheet-drama-point-3 {
-  top: 214px;
-  left: 448px;
+  top: -285px;
+  left: 443px;
 }
 
 .sheet-drama-point-4 {
-  top: 227px;
-  left: 462px;
+  top: -289px;
+  left: 457px;
 }
 
 .sheet-drama-point-5 {
-  top: 235px;
-  left: 480px;
+  top: -300px;
+  left: 475px;
 }
 
 .sheet-drama-point-6 {
-  top: 234px;
-  left: 502px;
+  top: -319px;
+  left: 497px;
 }
 
 .sheet-drama-point-7 {
-  top: 226px;
-  left: 521px;
+  top: -345px;
+  left: 516px;
 }
 
 .sheet-drama-point-8 {
-  top: 213px;
-  left: 535px;
+  top: -376px;
+  left: 530px;
 }
 
 .sheet-drama-point-9 {
-  top: 194px;
-  left: 544px;
+  top: -413px;
+  left: 538px;
 }
 
 .sheet-drama-point-10 {
-  top: 173px;
-  left: 545px;
+  top: -451px;
+  left: 541px;
 }
 
 /* Approaches points */
@@ -354,24 +355,24 @@ input[type='number'] {
 .sheet-caution-value {
   border-radius: 50%;
   font-size: 19px;
-  height: 33px;
+  height: 33px !important;
   text-align: center;
-  width: 33px;
+  width: 33px !important;
 }
 
 .sheet-discipline-value {
-  left: 716px;
-  top: 133px;
+  left: 709px;
+  top: -512px;
 }
 
 .sheet-rush-value {
-  left: 679px;
-  top: 201px;
+  left: 672px;
+  top: -476px;
 }
 
 .sheet-caution-value {
-  left: 756px;
-  top: 201px;
+  left: 749px;
+  top: -509px;
 }
 
 /* Additional stats */
@@ -383,31 +384,31 @@ input[type='number'] {
 .sheet-unprepared-value {
   border-radius: 50%;
   font-size: 14px;
-  height: 24px;
-  left: 417px;
+  height: 24px !important;
+  left: 409px;
   text-align: center;
-  top: 281px;
-  width: 24px;
+  top: -462px;
+  width: 24px !important;
 }
 
 .sheet-melee-damage-value {
-  top: 308px;
+  top: -459px;
 }
 
 .sheet-ranged-damage-value {
-  top: 336px;
+  top: -455px;
 }
 
 .sheet-supernatural-damage-value {
-  top: 363px;
+  top: -452px;
 }
 
 .sheet-defense-value {
-  top: 391px;
+  top: -448px;
 }
 
 .sheet-unprepared-value {
-  top: 418px;
+  top: -445px;
 }
 
 .sheet-weapon-1-value,
@@ -418,32 +419,32 @@ input[type='number'] {
 .sheet-toughness-value,
 .sheet-pa-value,
 .sheet-minus-defense-value {
-  top: 280px;
-  left: 634px;
+  top: -611px;
+  left: 625px;
   width: 186px;
 }
 
 .sheet-weapon-2-value {
-  top: 307px;
-  left: 603px;
+  top: -613px;
+  left: 594px;
   width: 226px;
 }
 
 .sheet-armor-value {
-  top: 335px;
-  left: 655px;
+  top: -614px;
+  left: 647px;
   width: 173px;
 }
 
 .sheet-reinforcement-value {
-  top: 362px;
-  left: 649px;
+  top: -615px;
+  left: 640px;
   width: 180px;
 }
 
 .sheet-shield-value {
-  top: 391px;
-  left: 637px;
+  top: -616px;
+  left: 630px;
   width: 192px;
 }
 
@@ -452,62 +453,70 @@ input[type='number'] {
 .sheet-minus-defense-value {
   border-radius: 50%;
   font-size: 14px;
-  height: 25px;
-  left: 651px;
+  height: 24px !important;
+  left: 643px;
   text-align: center;
-  top: 420px;
-  width: 25px;
+  top: -607px;
+  width: 24px !important;
 }
 
 .sheet-pa-value {
-  left: 717px;
+  left: 682px;
 }
 
 .sheet-minus-defense-value {
-  left: 786px;
+  left: 724px;
 }
 
 .sheet-hitos {
-  top: 529px;
-  left: 137px;
+  top: -526px;
+  left: 122px;
   width: 400px;
   height: 200px;
 }
 
 .sheet-talents {
-  top: 529px;
-  left: 588px;
-  width: 203px;
+  top: -747px;
+  left: 578px;
+  width: 198px;
   height: 130px;
 }
 
 hr {
   border-width: 3px;
-  left: 584px;
-  position: absolute;
-  top: 653px;
+  left: 247px;
+  position: relative;
+  top: -780px;
   width: 208px;
 }
 
 .sheet-label {
-  left: 624px;
-  padding-top: 3px;
-  position: absolute;
+  left: 633px;
+  position: relative;
 }
 
-.sheet-potence,
+.sheet-potence {
+  top: -793px;
+}
+
 .sheet-potence-value {
-  top: 670px;
+  top: -794px;
 }
 
-.sheet-structure,
+.sheet-structure {
+  top: -790px;
+}
+
 .sheet-structure-value {
-  top: 695px;
+  top: -788px;
 }
 
-.sheet-versatility,
+.sheet-versatility {
+  top: -784px;
+}
+
 .sheet-versatility-value {
-  top: 720;
+  top: -785px;
 }
 
 .sheet-potence-value,
@@ -515,39 +524,41 @@ hr {
 .sheet-versatility-value {
   border-radius: 50%;
   font-size: 14px;
-  height: 24px;
-  left: 593px;
+  height: 24px !important;
+  left: 626px;
   text-align: center;
-  width: 24px;
+  width: 24px !important;
 }
 
 .sheet-ship-talents {
   height: 41px;
-  left: 588px;
-  width: 204px;
-  top: 747px;
+  left: 599px;
+  width: 154px;
+  top: -780px;
 }
 
 .sheet-problem {
-  top: 769px;
-  left: 137px;
+  top: -844px;
+  left: 128px;
   width: 400px;
 }
 
 .sheet-consecuences,
 .sheet-equipment,
 .sheet-relationships {
-  top: 877px;
-  left: 137px;
-  width: 196px;
+  top: -761px;
+  left: 130px;
+  width: 185px;
   height: 155px;
 }
 
 .sheet-equipment {
-  left: 336px;
+  left: 128px;
 }
 
 .sheet-relationships {
-  left: 603px;
+  left: 193px;
   width: 173px;
+  height: 150px;
+  top: -773px;
 }
