--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -335,13 +335,13 @@ include src/pug/_variables.pug
 							h2(data-i18n=`${val.toLowerCase()}`) #{val}
 					.rows.repeating-container
 						fieldset(class=`repeating_augementations`)
-							span(name=`attr_augementation`)
+							span(name=`attr_augmentation`)
 							span.center(name=`attr_rating`)
 							span.center(name=`attr_essence`)
 							+repeatingSectionFlags()
 							.settings
 								each val in augementations
-									- const attrName = val === 'Augmentations' ? 'augementation' : val.toLowerCase();
+									- const attrName = val === 'Augmentations' ? 'augmentation' : val.toLowerCase();
 									- const type = val === 'Augmentations' ? 'text' : 'number';
 									- const placeholder = val === 'Augmentations' ? 'name' : '0';
 									label(data-i18n-title=val title=val)
