--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -567,7 +567,7 @@ include src/rolltemplates.html
 include src/html/hidden.html
 
 //- SCRIPTS
-include src/pug/scripts.js
+include src/js/scripts.js
 
 //- CHUMMER IMPORTER
 include src/html/importer.html
