[5th Edition OGL] Restructure spell options flag

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
@@ -1037,6 +1037,7 @@ button[type=roll] * {
 
 }
 
+.sheet-spell .sheet-details-flag,
 .sheet-attacks .sheet-options-flag,
 .sheet-spell .sheet-options-flag,
 .sheet-tool .sheet-options-flag,
@@ -1059,6 +1060,7 @@ button[type=roll] * {
     z-index: 2;
 }
 
+.sheet-spell .sheet-details-flag + span,
 .sheet-attacks .sheet-options-flag + span,
 .sheet-spell .sheet-options-flag + span,
 .sheet-tool .sheet-options-flag + span,
@@ -1072,6 +1074,7 @@ button[type=roll] * {
 .sheet-equipment .sheet-inventorysubflag + span,
 .sheet-header .sheet-options-flag + span
 {
+    align-items: center;
     position: absolute;
     top: 0px;
     right: 0px;
@@ -1086,12 +1089,30 @@ button[type=roll] * {
     display: none;
 }
 
+.sheet-spell .sheet-details-flag:hover + span,
+.sheet-attacks .sheet-options-flag:hover + span,
+.sheet-spell .sheet-options-flag:hover + span,
+.sheet-tool .sheet-options-flag:hover + span,
+.sheet-npc .sheet-npc_options-flag:hover + span,
+.sheet-trait .sheet-options-flag:hover + span,
+.sheet-global-mod .sheet-options-flag:hover + span,
+.sheet-action .sheet-options-flag:hover + span,
+.sheet-textbox .sheet-options-flag:hover + span,
+.sheet-proficiencies .sheet-options-flag:hover + span,
+.sheet-traits .sheet-options-flag:hover + span,
+.sheet-equipment .sheet-inventorysubflag:hover + span,
+.sheet-header .sheet-options-flag:hover + span
+{
+    color: #000000;
+}
+
 .sheet-pc .sheet-global-mod .sheet-options-flag:not(:checked) ~ .sheet-display,
 .sheet-pc .sheet-global-mod .sheet-options-flag:checked ~ .sheet-options {
     width: 80%;
     display: inline-block;
 }
 
+.sheet-spell .sheet-details-flag:checked + span,
 .sheet-attacks .sheet-options-flag:checked + span,
 .sheet-spell .sheet-options-flag:checked + span,
 .sheet-tool .sheet-options-flag:checked + span,
@@ -1106,9 +1127,10 @@ button[type=roll] * {
 .sheet-header .sheet-options-flag:checked + span
 {
     color: black;
-    display: block;
+    display: flex;
 }
 
+.sheet-spell:hover .sheet-details-flag + span,
 .sheet-attacks .sheet-attack:hover .sheet-options-flag + span,
 .sheet-spell:hover .sheet-options-flag + span,
 .sheet-tool:hover .sheet-options-flag + span,
@@ -1122,7 +1144,7 @@ button[type=roll] * {
 .sheet-pc .sheet-trait:hover .sheet-output,
 .sheet-pc .sheet-header:hover .sheet-options-flag + span
 {
-    display: block;
+    display: flex;
 }
 
 .sheet-pc .sheet-header .sheet-options-flag {
@@ -1229,6 +1251,7 @@ button[type=roll] * {
     word-break: break-word;
 }
 
+.sheet-spell .sheet-details-flag:checked ~ .sheet-wrapper,
 .sheet-attacks .sheet-options-flag:checked ~ .sheet-options,
 .sheet-spell .sheet-options-flag:checked ~ .sheet-options,
 .sheet-tool .sheet-options-flag:checked ~ .sheet-options,
@@ -1753,65 +1776,54 @@ span.sheet-spellconcentration
     color: black;
 }
 
-.sheet-spell .sheet-details-flag {
-    opacity: 0;
-    position: absolute;
-    top: 0px;
-    right: 23px;
-    width: 18px;
-    height: 18px;
-    z-index: 2;
-}
-
+.sheet-spell .sheet-details-flag,
 .sheet-spell .sheet-details-flag + span {
-    position: absolute;
-    top: 0px;
-    right: 23px;
-    white-space: nowrap;
-    width: 18px;
-    height: 18px;
-    font-size: 20px;
-    font-family: pictos;
-    color: #A0A0A0;
-    cursor: pointer;
-    margin-top: 0px;
-    display: none;
+    right: 30px;
 }
 
-.sheet-spell .sheet-details button.sheet-spell_link::before {
+.sheet-spell .sheet-wrapper .sheet-options-flag + span {
+    display: flex;
+}
+
+.sheet-spell .sheet-wrapper button.sheet-spell_link::before {
     content: '|';
 }
 
-.sheet-spell .sheet-details button.sheet-spell_link {
-    float: right;
+.sheet-spell .sheet-wrapper button.sheet-spell_link {
+    position: absolute;
+    top: 0;
+    right: 5px;
     border: none;
     background: none;
     color: #A0A0A0;
+    margin: 0;
+    padding: 0;
 }
 
-.sheet-spell .sheet-details button.sheet-spell_link:hover {
+.sheet-spell .sheet-wrapper button.sheet-spell_link:hover {
     color: #000000;
 }
 
-.sheet-spell .sheet-details-flag:checked + span {
-    display: block;
-    color: #000000;
-}
-
-.sheet-spell:hover .sheet-details-flag + span {
-    display: block;
-}
-
-.sheet-spell .sheet-details-flag ~ .sheet-details {
+.sheet-spell .sheet-wrapper {
     display: none;
-}
-
-.sheet-spell .sheet-details-flag:checked ~ .sheet-details {
-    display: block;
-}
-
-.sheet-spell .sheet-details {
+    position: relative;
     margin: 15px 0;
+}
+
+.sheet-spell .sheet-wrapper .sheet-options-flag {
+    z-index: 10;
+}
+
+.sheet-spell .sheet-wrapper .sheet-options-flag,
+.sheet-spell .sheet-wrapper .sheet-options-flag + span {
+    right: 25px;
+    font-size: 1.3em;
+}
+
+.sheet-spell .sheet-wrapper .sheet-options-flag:checked + span,
+.sheet-spell .sheet-wrapper .sheet-options-flag:checked ~ button.sheet-spell_link,
+.sheet-spell .sheet-wrapper .sheet-options-flag:checked ~ .sheet-details {
+    display: none;
 }
 
 .sheet-spell .sheet-details span:not(.sheet-innate){
@@ -1853,6 +1865,38 @@ span.sheet-spellconcentration
 
 .sheet-spell .sheet-details input[name="attr_spellcomp_materials"][value=""] + span,
 .sheet-spell .sheet-details input[name="attr_spellathigherlevels"][value=""] + div {
+    display: none;
+}
+
+.sheet-spell .sheet-options {
+    border-top: none;
+    border-bottom: 2px dashed gold;
+    padding-bottom: 40px;
+}
+
+.sheet-spell .sheet-options-done {
+    display: inline-block;
+    margin-top: 5px;
+    padding: 3px 10px;
+    width: auto;
+    border-radius: 1em;
+    color: #ffffff;
+    background-color: #000000;
+    font-size: 1em;
+    float: right;
+    cursor: pointer;
+}
+
+.sheet-spell .sheet-options-done:hover {
+    opacity: 0.6;
+}
+
+.sheet-spell .sheet-options-done::before {
+    content: '3';
+    font-family: pictos;
+}
+
+.sheet-spell .sheet-options-done input[type="checkbox"] {
     display: none;
 }
 
