--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -7,7 +7,7 @@
   border: 2px solid black;
   border-radius: 5px;
   font-size: .85em;
-  background-color: oldlace;
+  background-color: #ffffea;
 }
 
 span.sheet-announcements-show::before {
@@ -28,12 +28,67 @@ input.sheet-announcements-show {
   opacity: 0;
 }
 
-input.sheet-announcements-show:hover+span {
+.sheet-announcements-exit {
+  float: right;
+  position: relative;
+  margin: 0.5em -3em 0 0;
+  font-family: pictos;
+  font-size: 1em;
+}
+
+input[type="checkbox"].sheet-announcements-older-show {
+  width: 1.5em;
+  height: 1em;
+  margin: -1.1em 0 0 0;
+  opacity: 0;
+  z-index: 1;
+  position: relative;
+  float: right;
+}
+
+input.sheet-announcements-show:hover +span {
   color: red;
 }
 
-.sheet-announcements-show:not(:checked)+span+div.sheet-announcements {
+input.sheet-announcements-older-show:hover+span {
+  border-left-color: red;
+}
+
+input.sheet-announcements-older-show+span {
+  transform-origin: 25% 50%;
+  border: 0.4em solid transparent;
+  border-width: 0.4em 0.6em;
+  border-left-color: #C0A748;
+  width: 0;
+  height: 0px;
+  text-align: center;
+  content: '';
+  -webkit-transition: all .3s ease;
+  -moz-transition: all .3s ease;
+  -o-transition: all .3s ease;
+  transition: all .3s ease;
+  margin: -1em 0 0 0;
+  position: relative;
+  float: right;
+}
+
+input.sheet-announcements-older-show:checked+span {
+  transform: rotate(90deg);
+}
+
+.sheet-announcements-show:not(:checked)+span+div.sheet-announcements,
+.sheet-announcements-older-show:not(:checked) ~ .sheet-announcements-older-show {
   display: none;
+}
+
+.sheet-announcements-older-show:checked+span ~ .sheet-announcements-older-show {
+  display: block;
+  color: #333;
+  border: 1px solid #000;
+  border-radius: 5px;
+  box-sizing: border-box;
+  margin: 2em;
+  padding: 1em;
 }
 
 .sheet-announcements {
@@ -41,7 +96,7 @@ input.sheet-announcements-show:hover+span {
   margin: -1em .5em 1em .5em;
   border: 2px solid #000;
   border-radius: 5px;
-  background-color: oldlace;
+  background-color: #ffffea;
 }
 
 /* Text */
@@ -297,9 +352,20 @@ button.sheet-roll-button {
 }
 */
 /* Update the Dice Pool indicator  */
+
 .sheet-box-indicator button,
 .sheet-box-api-indicator button {
-  margin: 0;
+    z-index: 1;
+    box-shadow: 0px 2px 4px 2px #000;
+    border: 1px solid #000;
+    background: #a60100;
+    color: #fff;
+}
+
+.sheet-box-indicator button:hover,
+.sheet-box-api-indicator button:hover {
+    box-shadow: 0px 1px 4px 2px #808080;
+    border: 1px solid #a60100;
 }
 
 .sheet-box-indicator,
@@ -314,28 +380,28 @@ button.sheet-roll-button {
 
 .sheet-box-indicator::after {
   content: '';
-  width: 3.25em;
-  margin: -2px 0 -2px -4.9em;
+  width: 3.75em;
+  margin: 0px 0 -2px -5.25em;
   background-color: transparent;
-  border: 11px solid #a60100;
+  border: 10px solid #a60100;
   border-radius: 4px;
-  z-index: -1;
+  z-index: 0;
   opacity: 0;
-  box-shadow: 0 2px 15px #a60100;
+  box-shadow: 0 2px 10px 5px #a60100;
   -webkit-transition: opacity .5s;
   transition: opacity .5s;
 }
 
 .sheet-box-api-indicator::after {
   content: '';
-  width: 7.125em;
+  width: 7.5em;
   margin: -2px 0px -4px -9em;
   background-color: transparent;
-  border: 13px solid #a60100;
+  border: 10px solid #a60100;
   border-radius: 4px;
-  z-index: -1;
+  z-index: 0;
   opacity: 0;
-  box-shadow: 0 2px 15px #a60100;
+  box-shadow: 0 2px 10px 5px #a60100;
   -webkit-transition: opacity .5s;
   transition: opacity .5s;
 }
@@ -348,10 +414,11 @@ button.sheet-roll-button {
 /* api dice toggle */
 button.sheet-api-button {
   border: 1px solid lightblue;
-  box-shadow: 1px 2px 2px darkgrey;
+  box-shadow: 2px 2px 3px darkgrey;
 }
 
-input[type="checkbox"].sheet-hidden {
+input[type="checkbox"].sheet-hidden,
+.sheet-hidden {
   display: none;
 }
 
@@ -369,6 +436,7 @@ input.sheet-hidden.sheet-api-toggle-show:checked~div.sheet-grid-item.sheet-api-r
 
 input.sheet-hidden.sheet-api-toggle-show:checked~div.sheet-grid-item.sheet-api-roll button::after {
   content: 'w/API';
+  margin-right: 2px;
 }
 
 /* repcontrol */
@@ -432,15 +500,14 @@ input.sheet-monster_only:checked~div.sheet-character .sheet-monster+span {
 }
 
 input[type='radio'].sheet-tab {
-  width: 90px;
+width: 90px;
   height: 20px;
   font-size: 1.1em;
   font-family: "Times New Roman", Times, serif;
   float: left;
-  margin: 32px 1px 0 1px;
+  margin: 34px 1px 0 1px;
   -webkit-appearance: none;
   -moz-appearance: none;
-  appearance: none;
   border: none;
   outline: none;
   position: relative;
@@ -532,8 +599,8 @@ input.sheet-tab:checked:hover::before {
   border-image-slice: 60 50 60 50;
   border-image-width: 60px 50px 60px 50px;
   border-image-outset: 2 2 0 2;
-  border-image-repeat: repeat repeat;
-  border-image-source: url(http://imgsrv.roll20.net/?src=imgsrv.roll20.net/%3Fsrc%3Di.imgur.com/XuBOFJI.png);
+  border-image-repeat: repeat;
+  border-image-source: url(http://imgsrv.roll20.net:5100/?src=i.imgur.com/5Z0dp3Q.png);
 }
 
 .sheet-logo {
@@ -546,6 +613,19 @@ input.sheet-tab:checked:hover::before {
 input {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #000000;
+}
+
+.sheet-input:focus,
+input[type="text"].sheet-input:focus,
+input[type="number"].sheet-input:focus,
+input[type="text"].sheet-input:focus,
+input[type="number"].sheet-input:focus,
+input[type="text"].sheet-input-number:focus,
+input[type="number"].sheet-input-number:focus,
+.sheet-input-textare:focus,
+textarea:focus {
+  background-color: #ffffea;
+  outline: none;
 }
 
 .sheet-input,
@@ -693,7 +773,7 @@ input.sheet-expand:checked~.sheet-input-textarea {
   grid-template-columns: 35% auto auto;
   grid-column-gap: 4px;
   grid-row-gap: 4px;
-  margin: -12px 5px 0 5px;
+  margin: -10px 5px 0 5px;
 }
 
 .sheet-box {
@@ -752,6 +832,7 @@ input.sheet-expand:checked~.sheet-input-textarea {
 
 .sheet-character-dice_pool {
   width: 44%;
+  background-color: #ffffea;
 }
 
 input.sheet-dice_only:checked~div.sheet-character .sheet-character-dice_pool {
@@ -1483,13 +1564,18 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
 .sheet-dice_pool-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 2px;
   grid-template-areas: "sheet-dice-header sheet-dice-header sheet-dice-header""sheet-dice-base sheet-dice-skill sheet-dice-gear""sheet-dice-artifact sheet-dice-artifact sheet-dice-artifact""sheet-dice-rolls sheet-dice-rolls sheet-dice-rolls""sheet-dice-preset sheet-dice-preset sheet-dice-preset""sheet-dice-footer sheet-dice-footer sheet-dice-footer";
 }
 
 .sheet-dice-base {
   display: grid;
-  justify-self: center;
+  justify-items: center;
   text-align: center;
+  background-color: white;
+  border: 1px solid #000;
+  padding: 2px 2px 0px 2px;
+  margin: 2px 0 0 0;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 2.5em 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-areas: "sheet-dice-base-header sheet-dice-base-header""sheet-dice-base-col1 sheet-dice-base-col2""sheet-dice-base-col1 sheet-dice-base-col2""sheet-dice-base-col1 sheet-dice-base-col2""sheet-dice-base-col1 sheet-dice-base-col2""sheet-dice-base-col1 sheet-dice-base-col2""sheet-dice-base-col1 sheet-dice-base-col2""sheet-dice-base-col1 sheet-dice-base-col2";
@@ -1514,8 +1600,13 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
 
 .sheet-dice-skill {
   display: grid;
-  justify-self: center;
+  justify-items: center;
   text-align: center;
+  background-color: #db5f5f;
+  color: #fff;
+  border: 1px solid #000;
+  padding: 2px 2px 0px 2px;
+  margin: 2px 0 0 0;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 2.5em 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-areas: "sheet-dice-skill-header sheet-dice-skill-header""sheet-dice-skill-col1 sheet-dice-skill-col2""sheet-dice-skill-col1 sheet-dice-skill-col2""sheet-dice-skill-col1 sheet-dice-skill-col2""sheet-dice-skill-col1 sheet-dice-skill-col2""sheet-dice-skill-col1 sheet-dice-skill-col2""sheet-dice-skill-col1 sheet-dice-skill-col2""sheet-dice-skill-col1 sheet-dice-skill-col2";
@@ -1540,8 +1631,13 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
 
 .sheet-dice-gear {
   display: grid;
-  justify-self: center;
+  justify-items: center;
   text-align: center;
+  background-color: #404040;
+  color: #fff;
+  border: 1px solid #000;
+  padding: 2px 2px 0px 2px;
+  margin: 2px 0 0 0;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 2.5em 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-areas: "sheet-dice-gear-header sheet-dice-gear-header""sheet-dice-gear-col1 sheet-dice-gear-col2""sheet-dice-gear-col1 sheet-dice-gear-col2""sheet-dice-gear-col1 sheet-dice-gear-col2""sheet-dice-gear-col1 sheet-dice-gear-col2""sheet-dice-gear-col1 sheet-dice-gear-col2""sheet-dice-gear-col1 sheet-dice-gear-col2""sheet-dice-gear-col1 sheet-dice-gear-col2";
@@ -1567,15 +1663,15 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
 .sheet-dice-artifact {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: .75fr 1fr;
+  grid-template-rows: 2.5em 2em;
   grid-template-areas: "sheet-dice-artifact-header sheet-dice-artifact-header sheet-dice-artifact-header sheet-dice-artifact-header""sheet-dice-artifact-rolls sheet-dice-artifact-rolls sheet-dice-artifact-rolls sheet-dice-artifact-rolls";
-  grid-area: sheet-dice-artifact;
-  margin-top: -8px;
+  grid-area: sheet-dice-artifact;  
 }
 
 .sheet-dice-artifact-header {
   text-align: center;
   grid-area: sheet-dice-artifact-header;
+  margin: 5px 0 0 0;
 }
 
 .sheet-dice-artifact-rolls {
@@ -1583,6 +1679,9 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
   flex-flow: row;
   justify-content: space-evenly;
   grid-area: sheet-dice-artifact-rolls;
+  margin: -5px 0 0 0;
+  background-color: black;
+  height: .5em;
 }
 
 .sheet-dice-rolls {
@@ -1590,7 +1689,6 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
   flex-flow: row;
   justify-content: space-evenly;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
   grid-template-areas: "sheet-dice-rolls-roll sheet-dice-rolls-push sheet-dice-rolls-d66";
   grid-area: sheet-dice-rolls;
   margin-top: 10px;
@@ -1610,10 +1708,8 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
 
 .sheet-dice-preset {
   display: grid;
-  text-align: center;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
-  grid-template-areas: "sheet-dice-preset-header""sheet-dice-preset-preset";
+  justify-items: center;
+  grid-template-areas: "sheet-dice-preset-header" "sheet-dice-preset-preset";
   grid-area: sheet-dice-preset;
   margin-top: 10px;
 }
@@ -1626,13 +1722,24 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
   grid-area: sheet-dice-preset-preset;
 }
 
+.sheet-dice-preset-preset::before, .sheet-dice-preset-preset::after {
+  content: '‟';
+  margin-right: 2px;
+}
+
+.sheet-dice-preset-preset::after {
+  content: '”';
+  margin-left: 2px;
+}
+
 .sheet-dice-footer {
   display: grid;
+  justify-items: center;
   grid-template-columns: 10em auto 5em;
-  grid-template-rows: 2.5em;
+  grid-template-rows: 2.25em;
   grid-template-areas: "sheet-dice-footer-clear . sheet-dice-footer-api";
   grid-area: sheet-dice-footer;
-  margin: 12px 0 5px 0;
+  margin: 10px 0 10px 0;
 }
 
 .sheet-dice-footer-clear {
@@ -2515,7 +2622,7 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
   grid-template-rows: repeat(4, auto);
   grid-column-gap: 4px;
   grid-row-gap: 4px;
-  margin: -12px 5px 0 5px;
+  margin: -10px 5px 0 5px;
 }
 
 .sheet-stronghold-details {
@@ -2650,10 +2757,11 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
 
 .sheet-stronghold-hirelings-grid {
   display: grid;
-  grid-template-columns: 3fr 3em 1fr;
+  grid-template-columns: auto 3em 5em;
   grid-template-rows: auto;
   grid-row-gap: 2px;
   grid-column-gap: 2px;
+  margin-bottom: 2px;
 }
 
 .sheet-stronghold-hirelings-box {
@@ -2676,8 +2784,30 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
   grid-column-start: 3;
 }
 
+.sheet-stronghold-hirelings-box3 span {
+  grid-row-start: 1;
+  grid-column-start: 3;
+  word-break: break-word;
+  height: 2em;
+  line-height: 1em;
+  margin-top: -9px;
+  background: transparent;
+  text-align: center;
+}
+
+input.sheet-stronghold-hirelings-box3 {
+  max-width: 3.5em;
+  display: flex;
+  justify-self: center;
+}
+
 .sheet-stronghold-hirelings-box4 {
   grid-row-start: 2;
+  grid-column: 1/4;
+}
+
+.sheet-stronghold-hirelings-box5 {
+  grid-row-start: 3;
   grid-column: 1/4;
 }
 
@@ -2927,9 +3057,9 @@ input[type="checkbox"].sheet-legendary:checked+span::before {
   border-image-slice: 74;
   border-image-width: 50px 80px 50px 80px;
   border-image-outset: 6 4 4 4;
-  border-image-repeat: repeat;
+  border-image-repeat: stretch repeat;
   margin: 5px 0 5px -20px;
-  border-image-source: url(http://imgsrv.roll20.net/?src=imgsrv.roll20.net/%3Fsrc%3Dimgsrv.roll20.net/%253Fsrc%253Dimgsrv.roll20.net/%25253Fsrc%25253Di.imgur.com/XuBOFJI.png);
+  border-image-source: url(http://imgsrv.roll20.net/?src=i.imgur.com/P4vj7jz.png);
 }
 
 .sheet-rolltemplate-forbiddenlands div.sheet-template-header {
