--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -2171,6 +2171,12 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
     font-weight: bold;
 }
 
+.sheet-rolltemplate-skillRoll .sheet-container table.sheet-result .sheet-failure-note-label {
+    font-weight: bold; 
+    font-style: italic;    
+}
+
+
 .sheet-rolltemplate-skillRoll .sheet-container table.sheet-result .sheet-effective-skill .inlinerollresult {
     background-color: black;
     border: 2px solid black;
